TODO
	Crear paquete laboratorio

2021-08-12
	ALTER TABLE ingenio.ingenio.diatrabajo ADD activo bool NULL;
	UPDATE ingenio.ingenio.diatrabajo SET activo = FALSE;
	Agregar "activo" en src/ec/carper/ingenio/model/DiaTrabajo.groovy
	Agregar [ @DescriptionsList(condition="\${activo}='true'", order="\${fecha}") ] en src/ec/carper/ingenio/model/Formulario.groovy

2020-10-26 
	BlcReportAction

2020-10-21 
	Agregar en acidez volátil: PRE COSECHA QUEMADA y CAÑA COMERCIAL
	BlcDetalle14, BlcDetalle15, BlcDetalle16
	Parámetro FR 0.641
	BlcPDetalle14, BlcPDetalle15, BlcPDetalle16

2020-10-20
	BLC: Consultar datos y cálculos de BlcDetalle13
	Modificar acumulado de Sacarosa en Silos Día Anterior en BlcDetalle12

2020-10-15 
	Diagrama de proceso del sistema +ingenio

2020-10-14 
	Miel F.M. Gal/TCM
	Agregar sumatoria "Sacarosa en Silos"
	BLC: Consultar datos y cálculos de detalle12

2010-10-11
	BlcCenicana consultar datos

2010-10-11
	BlcCenicanaP y BlcCelicanaPDetalle
	BlcCenicana y BlcCelicanaDetalle

2010-10-11
	Crear BlcAdmin para ingresar datos acumulados iniciales
	Crear valores del día anterior en tabla detalle1
	Crear valores del día anterior en tabla detalle12
	Crear valores del día anterior en tabla detalle13
	BLC: Agregrar items de detalle12 y detalle13

2020-10-04
	BlcDetalle13P
	BlcDetalle13 
	BlcDetalle12P
	BlcDetalle12
	Agregar indicadores en indicador.csv
	Jugo Diluido (BR)

2020-10-01
	Ajustar BlcTest

2020-09-30 
	BlcDetalle1Action: implementar getValor()
	BlcDetalle1Action: Actualizar en getView() y con setValores() fuera del switch
	No se muestra BlcP.descripcion
	BlcTest: Agregar Pestaña Presentación de azúcar por presentaciones
	Pestaña Presentación de azúcar por presentaciones
	Agregar StockFabrica.ax140
	Ajustar getDetallePorIndicador() en StockFabricaDetalleAction
	Agregar StockFabrica.ax132
	Agregar StockFabrica.ax135

2020-09-29
	Agregar StockFabrica.ax140 en Plantilla
	Ajuste de StockFabricaTest
	Subir Plantilla StockProceso
	Subir Plantilla Material
